<resources>
    <string name="app_name">GastoViagem</string>
    <string name="elemento_principal">Elemento principal</string>
    <string name="elemento_relativo_ao_elemento_principal">Elemento relativo ao elemento principal</string>
    <string name="elemento_relativo_ao_elemento_principal_e_ao_elemento_a_esquerda">Elemento relativo ao elemento principal e ao elemento a esquerda</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">LOGIN</string>
    <string name="cadastre_se">Ainda não tem cadastro? Cadastre-se!</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
</resources>