<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/element_above"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="128dp"
        android:background="@color/purple_200"
        android:text="@string/elemento_principal"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/element_bellow"
        android:layout_width="198dp"
        android:layout_height="64dp"
        android:layout_below="@+id/element_above"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple_200"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/elemento_relativo_ao_elemento_principal"/>

    <TextView
        android:id="@+id/another_element_bellow"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_below="@+id/element_above"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/element_bellow"
        android:background="@color/purple_200"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/elemento_relativo_ao_elemento_principal_e_ao_elemento_a_esquerda"/>
</RelativeLayout>